Fixed text sizing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -135,7 +135,7 @@ hr {
 }
 
 .mainText{
-  width:10%;
+  width:75%;
 }
 
 .subPageLinks{
